# Blink

./: Makefile  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Makefile
backend/src/: main.rs
backend/tests/: health_check.rs
docs/issues/: comprehensive-issues.md
frontend/: .eslintrc.js  .prettierignore  .prettierrc.js  App.tsx  Makefile  jest.setup.js  package.json  tsconfig.json
smartcontract/blink-contracts/: Makefile
smartcontract/blink-contracts/contracts/payment-processor/src/: lib.rs  test.rs
