[package]
name = "blink-backend"
version = "0.1.0"
edition = "2021"
description = "Blink Backend - Stellar-native payment processing server"
authors = ["Blink Team <team@blink.stellar>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stellar-sdk = "0.19"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
base64 = "0.22"
hex = "0.4"
